syntax = "proto3";
package imagegrpc;


// The Customer service definition.
service Imager {
  // Get all Images of specified document
  rpc GetImages(ImagesFilter) returns (stream Image) {}
  // Delete Image
  rpc DeleteImage(RemoveRequest) returns (RemoveResponse) {}
  // Create a new Image
  rpc AddImage(NewImageRequest) returns (NewImageResponse) {}
}

message Image {
    string docID = 1;
    string photoID = 2;
    string thumb = 3;
}

message NewImageRequest {
    string docID = 1;
    string photoID = 2;
    string thumb = 3;
}

message NewImageResponse {
    string docID = 1;
    string photoID = 2;
    string thumb = 3;
}

message RemoveRequest {
    string colID = 1;
    string imageID = 2;
}

message RemoveResponse {
    bool success = 1;
}

message ImagesFilter {
    string colID = 1;
}

message ServiceDiscovery {
    string order_service_uri = 1;
}